<?xml version="1.0" encoding="UTF-8"?>
	<project xmlns="http://maven.apache.org/POM/4.0.0" 
	         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
	         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
	http://maven.apache.org/xsd/maven-4.0.0.xsd">
	    <modelVersion>4.0.0</modelVersion>
	
	    <groupId>com.sixtyfour</groupId>
	    <artifactId>ImageViewer</artifactId>
	    <version>0.1-SNAPSHOT</version>
	    <packaging>war</packaging>
	
	    <name>ImageViewer</name>
	
	    <properties>
	        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	        <maven.compiler.source>11</maven.compiler.source>
	        <maven.compiler.target>11</maven.compiler.target>
	    </properties>
	    
	    <dependencies>
	        <dependency>
	            <groupId>javax.servlet</groupId>
	            <artifactId>javax.servlet-api</artifactId>
	            <version>3.1.0</version>
	            <scope>provided</scope>
	        </dependency>
	        
	        <dependency>
    			<groupId>com.sixtyfour</groupId>
    			<artifactId>basicv2</artifactId>
    			<version>0.0.1-SNAPSHOT</version>
			</dependency>

			<dependency>
				<groupId>com.sixtyfour</groupId>
				<artifactId>petsciiator</artifactId>
				<version>0.0.1-SNAPSHOT</version>
			</dependency>
			
			<dependency>
    			<groupId>com.fasterxml.jackson.core</groupId>
    			<artifactId>jackson-databind</artifactId>
    			<version>2.12.7.1</version>
			</dependency>

			<dependency>
				<groupId>org.apache.pdfbox</groupId>
				<artifactId>pdfbox</artifactId>
				<version>2.0.30</version>
			</dependency>

			<dependency>
				<groupId>com.github.jai-imageio</groupId>
				<artifactId>jai-imageio-core</artifactId>
				<version>1.4.0</version>
			</dependency>

			<dependency>
				<groupId>com.github.jai-imageio</groupId>
				<artifactId>jai-imageio-jpeg2000</artifactId>
				<version>1.3.0</version>
			</dependency>

			<!-- Optional for you ; just to avoid the same error with JBIG2 images -->
			<dependency>
				<groupId>org.apache.pdfbox</groupId>
				<artifactId>jbig2-imageio</artifactId>
				<version>3.0.3</version>
			</dependency>

			<!-- You can remove this, but you'll lose support for WEBP -->

			<dependency>
				<groupId>com.twelvemonkeys.imageio</groupId>
				<artifactId>imageio-metadata</artifactId>
				<version>3.11.0</version>
			</dependency>

			<dependency>
				<groupId>com.twelvemonkeys.imageio</groupId>
				<artifactId>imageio-core</artifactId>
				<version>3.11.0</version>
			</dependency>

			<dependency>
				<groupId>com.twelvemonkeys.imageio</groupId>
				<artifactId>imageio-webp</artifactId>
				<version>3.11.0</version>
			</dependency>

			<dependency>
				<groupId>com.twelvemonkeys.imageio</groupId>
				<artifactId>imageio-image</artifactId>
				<version>3.11.0</version>
			</dependency>

			<dependency>
				<groupId>com.twelvemonkeys.imageio</groupId>
				<artifactId>imageio-common</artifactId>
				<version>3.11.0</version>
			</dependency>

		</dependencies>
	
	    <build>
	        <plugins>
	
	            <plugin>
	                <groupId>org.apache.maven.plugins</groupId>
	                <artifactId>maven-war-plugin</artifactId>
	                <version>3.3.2</version>
	                <configuration>
	                    <failOnMissingWebXml>false</failOnMissingWebXml>
	                </configuration>
	            </plugin>
	
	        </plugins>
	    </build>
	
	</project>